Fixed some issues with button alignment in dialogs with side buttons.

--- a/records/app/src/main/scss/dialogs.scss
+++ b/records/app/src/main/scss/dialogs.scss
@@ -21,7 +21,7 @@
 
 .side-button-bar {
     -fx-spacing: 20;
-    -fx-padding: 20;
+    -fx-padding: 20 20 20 8;
 }
 .edit-column-content {
     -fx-spacing: 10;
